# white-space-c

./: README.md  coffeec.cabal  hello.c  wsc.cabal
src/: Error.hs  File.hs  Flags.hs  Main.hs  Parse.hs  Parsing.hs  Result.hs
src/Flags/: Args.hs  Option.hs
src/Prelude/: Extra.hs
wsc-src/: hello.wsc
