name:                white-space-c
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Chadtech
maintainer:          chadstearns1@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable wscc
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
    base >=4.10 && <4.11,
    flow >=1.0 && <1.1, 
    containers >= 0.6 && <0.7,
    ilist >=0.3 && <0.4,
    text-icu >=0.7 && <0.8,
    text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
