name:                white-space-c
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Chadtech
maintainer:          chadstearns1@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable wscc
  main-is:             Main.hs
  other-modules:
    Error,
    File,
    Flags,
    Flags.Args,
    Flags.Option,
    Parse,
    Prelude.Extra,
    Result
       
  -- other-extensions:    
  build-depends:       
    base >=4.10 && <4.11.2,
    flow >=1.0 && <1.1, 
    containers >= 0.6 && <0.7,
    ilist >=0.3 && <0.4,
    text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
